--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js"
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "clean":"rimraf dist",
+    "build":"npm run clean && npm run build:client"
+
   },
   "repository": {
     "type": "git",
@@ -22,7 +25,6 @@
     "vue": "^2.5.16"
   },
   "devDependencies": {
-    "webpack-merge": "^4.1.2",
     "autoprefixer": "^8.4.1",
     "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -36,6 +38,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.1.4",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -43,6 +46,7 @@
     "vue-loader": "^13.6.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.9.7",
+    "webpack-merge": "^4.1.2"
   }
 }
